--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.2.2",
+    "firebase": "^8.2.1",
     "mdbreact": "^5.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-icons": "^1.2.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-typing-animation": "^1.6.2",
+    "reactstrap": "^8.8.1",
+    "rxjs": "^6.6.3",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -47,6 +52,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-typing-animation": "^1.6.2"
+    "@types/firebase": "^3.2.1",
+    "@types/react-typing-animation": "^1.6.2",
+    "@types/reactstrap": "^8.7.2"
   }
 }
